--- a/src/main/resources/templates/client/user-dashboard.html
+++ b/src/main/resources/templates/client/user-dashboard.html
@@ -200,7 +200,7 @@
                     <button class="btn left-dashboard-show btn-animation btn-md fw-bold d-block mb-4 d-lg-none">Show
                         Menu</button>
                     <div class="dashboard-right-sidebar">
-                        <div class="tab-content" id="pills-tabContent">
+                        <div class="tab-content" >
                             <div class="tab-pane fade show active" id="pills-dashboard" role="tabpanel">
                                 <div class="dashboard-home">
                                     <div class="title">
@@ -1312,7 +1312,7 @@
                                             </select>
 
 
-                                            <ul class="nav nav-pills filter-box" id="pills-tab" role="tablist">
+                                            <ul class="nav nav-pills filter-box"  role="tablist">
                                                 <li class="nav-item" role="presentation">
                                                     <button class="nav-link active" id="pills-data-tab"
                                                         data-bs-toggle="pill" data-bs-target="#pills-data"
